--- a/README
+++ b/README
@@ -14,6 +14,10 @@ Switch to the `~/.vim` directory, and fetch submodules:
     git submodule init
     git submodule update
 
+To use taglist you will need to have exuberant ctags installed:
+
+    sudo apt-get install exuberant-ctags
+
 If you want to use vim-task you'll need to do this:
 
     cd ~/.vim
